--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .page {
   margin: auto;
-  max-width: 1200px;
+  max-width: 1600px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 10fr;
   column-gap: 20px;
   margin-top: 150px;
 }
 .filter {
   display: flex;
-  align-items: center;
+  align-items: start;
   flex-direction: column;
   width: 100%;
   background-color: #fff;
