--- a/src/components/Map/map.css
+++ b/src/components/Map/map.css
@@ -1,4 +1,9 @@
-.map{
+.map {
     width: 100%;
-    height: 500px;
+    height: 600px;
+}
+.contener {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
