--- a/src/components/Map/map.css
+++ b/src/components/Map/map.css
@@ -1,9 +1,52 @@
 .map {
     width: 100%;
-    height: 600px;
+    height: 550px;
 }
 .contener {
     width: 100%;
     display: flex;
     flex-direction: column;
+    row-gap: 20px;
+}
+.custom_popup .leaflet-popup-content{
+    width: 300px;
+    height: 200px;
+    
+}
+.image{
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    
+}
+
+.contener__time{
+    width: 100%;
+    height: 58px;
+    box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.25);
+    background: #fff;
+    display: flex;
+    font-family: "Inter";
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 150%;
+    color: #000;
+    align-items: center;
+    padding: 0 25px;
+}
+span{
+    color: #63C04C;
+}
+@media screen and (max-width: 700px){
+    .map{
+        height: 388px;
+    }
+    .custom_popup .leaflet-popup-content{
+        width: 170px;
+        height: 150px;
+        
+    }
+    .image{
+        height: 100px;
+    }
 }
