--- a/src/modules/Header/header.module.css
+++ b/src/modules/Header/header.module.css
@@ -15,6 +15,10 @@
     color: #fff;
     
 }
+
+.header__img{
+    margin-left: 5px;
+}
 @media screen and (max-width: 700px){
     .header{
         justify-content: center;
