--- a/src/modules/Map/map.css
+++ b/src/modules/Map/map.css
@@ -22,24 +22,42 @@
 
 .contener__time{
     width: 100%;
-    height: 58px;
+    height: 78px;
+    row-gap: 7px;
     box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.25);
     background: #fff;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 25px;
+}
+.contener_text{
     font-family: "Inter";
     font-weight: 700;
     font-size: 15px;
     line-height: 150%;
     color: #000;
-    align-items: center;
-    padding: 0 25px;
+}
+.contener_text2{
+    font-family: "Inter";
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 150%;
+    color: #63C04C;
 }
 span{
     color: #63C04C;
 }
+@media screen and (max-width:827px) {
+    .contener__time{
+        height: 120px;
+        row-gap: 20px;
+    }
+}
 @media screen and (max-width: 700px){
     .map{
         height: 388px;
+        margin-top: 50px;
     }
     .custom_popup .leaflet-popup-content{
         width: 170px;
